# stock-trading

./: .gitignore  pyproject.toml  setup_env.sh  trader_pro.py
.github/workflows/: swing_pipeline.yml
.streamlit/: config.toml
swing_trading_1/: .gitignore  FUTURE_SCOPE.md  README.md  config.py
swing_trading_1/backtest/: __init__.py  engine.py
swing_trading_1/data/: .gitkeep  market.duckdb
swing_trading_1/src/: conditions.py  db.py  fetcher.py  funnel_processor.py  impulse_finder.py  ingestor.py  logger.py  models.py  nse_fetcher.py  pipeline.py
swing_trading_1/trainer/: __init__.py  runner.py
ui/: app.py  requirements.txt
