[project]
name = "trade"
version = "0.1.0"
description = "Swing trading strategies"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "pydantic>=2.7.0",
    "pyarrow>=16.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
